--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -178,6 +178,7 @@
     "Cheque signing": "Cheque signing"
   },
   "crm": {
+    "activity": "Activity",
     "category": "Category",
     "client_type": "Client Type",
     "description": "Description",
@@ -185,10 +186,12 @@
     "no_client_found": "No Client Type found.",
     "no_occupation_found": "No Occupation found.",
     "no_sector_found": "No Sector found.",
+    "no_service_provider_type_activity_found": "No Service Provider Type Activity found",
     "no_service_provider_type_found": "No Service Provider Type found",
     "occupation": "Occupations",
     "search": "Search",
     "sector": "Sectors",
+    "service_provider_type_activity": "Service Provider Types Activity",
     "service_provider_type": "Service Provider Types",
     "short_description": "Short Description",
     "status": "Status",
@@ -553,7 +556,6 @@
       "accept_quote": "Accept quote"
     },
     "policy": {
-
       "underwriting_new_transaction": "Underwriting: New transaction",
       "type_of_transaction": "Type of transaction",
       "new_business": "New business",
@@ -620,62 +622,62 @@
       "ncd_certificate_number": "NCD certificate number",
       "cashback_level": "Cashback level",
       "conveyance_type": "Conveyance type",
-      "by_sea":"By sea",
-      "by_air":"By Air",
-      "by_road":"By Road",
-      "by_sea_rail_road":"By Sea-rail-road",
-      "by_sea_road":"By Sea-road",
-      "by_air_road":"By Air-road",
-      "not_applicable":"Not applicable",
-      "none":"None",
+      "by_sea": "By sea",
+      "by_air": "By Air",
+      "by_road": "By Road",
+      "by_sea_rail_road": "By Sea-rail-road",
+      "by_sea_road": "By Sea-road",
+      "by_air_road": "By Air-road",
+      "not_applicable": "Not applicable",
+      "none": "None",
       "auto_generate_cert": "Auto generate cert",
       "installment_payment_pct": "Installment payment pct",
       "installment_period": "Installment Period",
-      "agent":"Agent",
-      "company":"Company",
-      "underwriting":"Underwriting",
-      "policy_details":"Policy Details",
-      "cover_from":"Cover from",
-      "cover_to":"Cover to",
-      "cover_days":"Cover days",
-      "currency":"Currency",
-      "currency_rate":"Currency rate",
-      "currency_fixed_rate":"Currency fixed rate",
-      "policy_document":"Policy document",
-      "payment_mode":"Payment mode",
-      "payment_reference":"Payment reference",
-      "payment_date":"Payment date",
-      "payment_frequency":"Payment frequency",
-      "holding_company":"Holding company",
-      "other_insterested_parties":"Other interested parties",
-      "installment_date":"Installment date",
-      "premium_financier":"Premium financier",
-      "payment_plan":"Payment plan",
-      "policy_generated":"Policy generated outside the system",
-      "old_policy_no":"Old policy no.",
-      "old_agent_no":"Old agent no.",
-      "reference_no":"Reference no.",
-      "import_risks":"Import risks",
-      "another_policy":"From another policy",
-      "from_csv":"From a CSV file",
-      "select_file":"Select a file to upload",
-      "choose_fiel":"Choose file",
-      "policy_no":"Policy no.",
+      "agent": "Agent",
+      "company": "Company",
+      "underwriting": "Underwriting",
+      "policy_details": "Policy Details",
+      "cover_from": "Cover from",
+      "cover_to": "Cover to",
+      "cover_days": "Cover days",
+      "currency": "Currency",
+      "currency_rate": "Currency rate",
+      "currency_fixed_rate": "Currency fixed rate",
+      "policy_document": "Policy document",
+      "payment_mode": "Payment mode",
+      "payment_reference": "Payment reference",
+      "payment_date": "Payment date",
+      "payment_frequency": "Payment frequency",
+      "holding_company": "Holding company",
+      "other_insterested_parties": "Other interested parties",
+      "installment_date": "Installment date",
+      "premium_financier": "Premium financier",
+      "payment_plan": "Payment plan",
+      "policy_generated": "Policy generated outside the system",
+      "old_policy_no": "Old policy no.",
+      "old_agent_no": "Old agent no.",
+      "reference_no": "Reference no.",
+      "import_risks": "Import risks",
+      "another_policy": "From another policy",
+      "from_csv": "From a CSV file",
+      "select_file": "Select a file to upload",
+      "choose_fiel": "Choose file",
+      "policy_no": "Policy no.",
 
       "annually": "Annually",
-      "semi_annually":"Semi-annually",
+      "semi_annually": "Semi-annually",
       "quaterly": "Quaterly",
-      "monthly" : "Monthly",
+      "monthly": "Monthly",
       "one_off": "One off",
       "others": "Others",
       "risk_location": "Risk location",
       "risk_town": "Risk town",
-      "risk_address":"Risk address",
+      "risk_address": "Risk address",
       "survey_risk": "Survey risk",
-      "Survey_date":"Survey date",
+      "Survey_date": "Survey date",
       "compute_maximum_exposure": "Compute max exposure",
       "max_exposure_amount": "Max exposure amount",
-      "territory":"Territory",
+      "territory": "Territory",
       "new_risk": "New risk",
       "eml_top_location_level": "EML/top location level",
       "rsk": "RSK",
@@ -683,16 +685,12 @@
       "period_rates": "Period rates",
       "prorata": "ProRata",
       "short_period_rates": "Short Period Rates",
-      "full":"Full",
+      "full": "Full",
       "retroactive_cover": "Retroactive cover",
       "maintenance_cover": "Maintenance cover",
       "quake_flood_zone": "Quake/flood zone",
-      "relational_group":"Relation group",
+      "relational_group": "Relation group",
       "risk_class": "Risk Class"
-
-
-
-
     }
   },
   "lms": {
@@ -765,7 +763,7 @@
   },
   "setups": {},
   "mngt_wrkflw": {
-    "tickets" : {
+    "tickets": {
       "reassign": "Reassign",
       "authorize": "Authorize",
       "from": "From",
@@ -867,7 +865,6 @@
       "importCSV": "Import CSV file",
       "reinsurerName": "Reinsurer name",
       "brokerName": "Broker name",
-      "facreAccountId": "Facre account Id",
       "rateAmount": "Rate/amount",
       "cessionRate": "Cession rate",
       "vat": "Vat",
