--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -178,6 +178,7 @@
     "Cheque signing": "Firma de cheques"
   },
   "crm": {
+    "activity": "Actividad",
     "category": "Categoría",
     "client_type": "Tipo de cliente",
     "description": "Descripción",
@@ -185,10 +186,12 @@
     "no_client_found": "No se encontró ningún tipo de cliente.",
     "no_occupation_found": "No se encontró ninguna ocupación.",
     "no_sector_found": "No se encontró ningún sector.",
+    "no_service_provider_type_activity_found": "No se encontró ninguna actividad de tipo de proveedor de servicios",
     "no_service_provider_type_found": "No se encontró ningún tipo de proveedor de servicios",
     "occupation": "Ocupaciones",
     "search": "Buscar",
     "sector": "Sectores",
+    "service_provider_type_activity": "Tipos de Proveedores de Servicios Actividad",
     "service_provider_type": "Tipos de Proveedores de Servicios",
     "short_description": "Descripción Corta",
     "status": "Estado",
@@ -756,7 +759,7 @@
   },
   "setups": {},
   "mngt_wrkflw": {
-    "tickets" : {
+    "tickets": {
       "reassign": "Reasignar",
       "authorize": "Autorizar",
       "from": "De",
@@ -858,7 +861,6 @@
       "importCSV": "Importar archivo CSV",
       "reinsurerName": "Nombre del Reasegurador",
       "brokerName": "Nombre del Corredor",
-      "facreAccountId": "ID de Cuenta de Facre",
       "rateAmount": "Tasa/monto",
       "cessionRate": "Tasa de Cesión",
       "vat": "IVA",
